# fraudsys

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MLproject  README.md  constraints.txt  docker-compose.yaml  justfile  pyproject.toml  python_env.yaml  requirements.txt
.docker/: api.Dockerfile  cleaner.Dockerfile  feature.Dockerfile  mlflow.Dockerfile  monitoring.Dockerfile  producer.Dockerfile
.github/workflows/: cd.yaml  ci.yaml
confs/jobs/: evaluation.yaml  experiment.yaml  explanation.yaml  extract.yaml  inference_evaluation.yaml  offline_feature_engineering.yaml  offline_features.yaml  offline_inference.yaml  offline_promotion.yaml  training.yaml  training_evaluation.yaml  tuning.yaml
confs/jobs/data/: feature_engineering.yaml  offline_feature_engineering.yaml  offline_features.yaml
confs/jobs/ml/: experiment.yaml  online_promotion.yaml  training.yaml  tuning.yaml
confs/services/: api.yaml  cleaner.yaml  feature.yaml  monitoring.yaml  producer.yaml  prometheus.yaml
docs/: architecture_overview.md  model_development.md
infra/terraform/: .gitignore  main.tf  outputs.tf  provider.tf  variables.tf
infra/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
outputs/: models_explanations.parquet  predictions_test.parquet  samples_explanations.parquet
src/fraudsys/: __main__.py  cli.py  constants.py  logging.py  settings.py
src/fraudsys/core/: features.py  metrics.py  models.py  pipelines.py  schemas.py
src/fraudsys/data/: __init__.py  loaders.py  writers.py
src/fraudsys/features/engineering/: aggregations.py  cleaning.py
src/fraudsys/features/store/: client.py  definitions.py  example.py
src/fraudsys/infra/: kafka.py  logging.py
src/fraudsys/infra/mlflow/: __init__.py  client.py  registries.py  signers.py
src/fraudsys/io/: datasets.py  kafka.py  registries.py  runtimes.py
src/fraudsys/io/features/: __init__.py  aggregations.py  client.py  definitions.py
src/fraudsys/jobs/: __init__.py  base.py  evaluation.py  experiment.py  explanation.py  extract.py  inference.py  offline_feature_engineering.py  offline_features.py  training.py  tuning.py
src/fraudsys/jobs/data/: extract.py  feature_engineering.py  offline_feature_engineering.py  offline_features.py
src/fraudsys/jobs/ml/: evaluation.py  experiment.py  explanation.py  inference.py  promotion.py  training.py  tuning.py
src/fraudsys/ml/: metrics.py  models.py  pipelines.py  samplers.py  searchers.py  splitters.py
src/fraudsys/services/: __init__.py  base.py  cleaner.py  feature.py  monitoring.py  producer.py
src/fraudsys/services/api/: app.py  dependencies.py  kafka.py  main.py  models.py
src/fraudsys/utils/: searchers.py  signers.py  splitters.py
tasks/: check.just  clean.just  commit.just  docker.just  feast.just  infra.just  install.just  pipeline.just  project.just  terraform.just
terraform/: main.tf  variables.tf
terraform/modules/iam/: variables.tf
terraform/modules/s3/: main.tf  outputs.tf
